Fixed navbar overflow for chrome

--- a/Reddit/css/navbar.css
+++ b/Reddit/css/navbar.css
@@ -7,6 +7,7 @@
   grid-row: 1/-1;
   border-right: 1px solid #ffffff1a;
   position: fixed;
+  overflow-x: hidden;
 }
 
 .navbar .nav-item:not(:last-child) {
